# blog-reviewer

./: .gitignore  DEVELOPMENT_LOG.md  Dockerfile  README-PR-001.md  README-PR-002.md  README-PR-003.md  README-PR-004.md  README-PR-005.md  README-PR-006.md  README-PR-007.md  README.md  claude_progress.json  claude_response.md  conftest.py  docker-compose.yml  pr_requirements.json  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.py  setup.py
.claude/agents/: api-developer.md  content-analyzer.md  docker-deployer.md  external-scraper.md  mongodb-manager.md  review-orchestrator.md
.github/: PULL_REQUEST_TEMPLATE.md  SETUP.md
.github/ISSUE_TEMPLATE/: pr-001-project-setup-simple.md  pr-001-project-setup.md  pr-002-database-models.md  pr-003-content-analysis.md  pr-004-external-scraping.md  pr-005-review-orchestrator.md  pr-006-basic-fastapi.md  pr-007-authentication-simple.md  pr-007-authentication.md
.github/scripts/: claude_code_generator.py  parse_pr_requirements.py  parse_pr_requirements_simple.py
.github/workflows/: ci.yml  claude-pr-automation.yml
api/: __init__.py  main.py
cli/: __init__.py
core/: __init__.py  config.py
core/content_analyzer/: __init__.py  analyzer.py  models.py  parser.py  quality_scorer.py  question_generator.py  structure_analyzer.py  style_analyzer.py
core/database/: connection.py
core/database/models/: article.py  author.py  review.py
core/database/operations/: article_ops.py  author_ops.py  review_ops.py
core/external_scraper/: __init__.py  brave_search_client.py  content_processor.py  firecrawl_client.py  models.py  rate_limiter.py  scraper.py
core/review_orchestrator/: __init__.py  error_handler.py  exceptions.py  metrics_collector.py  models.py  monitoring.py  orchestrator.py  retry.py  state_manager.py  task_queue.py  workflow_monitor.py
docker/mongodb/: init.js
examples/: external_scraper_demo.py
project_requirements/: api_specification.md  backend_requirements.md  database_schema.md  deployment_guide.md  frontend_requirements.md  prd.md  project_plan.md  testing_strategy.md
scripts/: setup_dev.sh
tests/: __init__.py  conftest.py
tests/integration/: test_database_operations.py  test_docker_services.py  test_simple_integration.py  test_workflow_end_to_end.py
tests/unit/: test_api.py  test_config.py  test_health.py
tests/unit/content_analyzer/: __init__.py  test_analyzer.py  test_parser.py  test_structure_analyzer.py
tests/unit/database/: test_connection.py  test_models.py  test_operations.py
tests/unit/external_scraper/: __init__.py  test_content_processor.py  test_models.py  test_rate_limiter.py
tests/unit/review_orchestrator/: __init__.py  test_error_handler.py  test_models.py  test_orchestrator.py  (+3 more)
